# gui

./: .gitignore  Cargo.toml  main.rs  star.txt
src/: main.rs
