[package]
name = "fb-videoer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
regex = "1.8.4"
reqwest = "0.11.18"
sanitize-filename = "0.4.0"
tokio = "1.28.2"

[[bin]]
name = "fb-videoer"
path = "main.rs"
